# Venus

./: .gitignore  AlgorithmTestCases.c  BFStest.c  BFStest.h  BFStestbackup.c  Backup_Algorithm  CMakeLists.txt  CV.py  IR_sensor.c  IR_sensor.h  QueueTest.c  all_sensors_test.c  color.c  color.h  distance.c  distance.h  division.c  embeddedImplementationInterface.c  embeddedInitialImp.c  embeddedInitialImp.h  esp_2  esp_2.h  esp_2_tests.h.bak  examplecode.c  fieldSplitter.c  finalAlgorithm.c  kill_python.sh  make_start.sh  messageSendTest.c  motorTest.c  readFile.h  robotAlgorithmBFSCamera.c  robotAlgorithmBFSTest.c  robotAlgorithmBFSTest.h  start.sh  testQueue.c  ultrasonic.c  venusAlgorithm.c
CV/: CV.py  CV_howto.txt  CV_test.py  make_start.sh  readFile.h  start.sh
Venus Visualisation/: Assembly-CSharp.csproj  Venus Visualisation.sln
Venus Visualisation/Assets/: CameraScript.cs  MainScript.cs  VarStorage.cs  debugText.txt
Venus Visualisation/Assets/Materials/: Backdrop.mat  BlackSamle.mat  BlueSample.mat  BorderMaterial.mat  GreenSample.mat  Obstacle.mat  Pynqbot.mat  RedSample.mat  WhiteSample.mat
Venus Visualisation/Assets/Other/: AN ARROW! A VECTOR!.fbx  E.prefab  MagneticsScript.cs  Magnyetics.unity
Venus Visualisation/Assets/Prefabs/: Boundary.prefab  Cliff.prefab  Obstacle.prefab  Robot0.prefab  Robot1.prefab  SampleBigBlack.prefab  SampleBigBlue.prefab  SampleBigGreen.prefab  SampleBigRed.prefab  SampleBigWhite.prefab  (+5 more)
Venus Visualisation/ProjectSettings/: ProjectSettings.asset
Venus Visualisation/UserSettings/: EditorUserSettings.asset
(+4 files in other folders)
